# stm32f0xx-hal-issue-130

./: .embed.toml  Cargo.toml  README.md  memory.x
src/: main.rs
