[package]
name = "stm32f0xx-hal-issue-130"
version = "0.1.0"
authors = ["Alex M. <alexmgit@protonmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.4"
rtt-target = "0.3.0"
stm32f0xx-hal = { git = "https://github.com/newAM/stm32f0xx-hal/", branch = "issue-130", features = ["stm32f070xb"] }
enc28j60 = "0.2.1"
